# ai_incentives2

./: .gitignore  ai_incentives_model.ipynb  cpp_bindings.py  discrete_model.py  factor_cost_scenarios.py  factor_cost_scenarios_cpp.py  grid_searches.py  model.py  original_model.ipynb  readme.md  scenarios.py  simple_model.md  simple_model.py  simple_scenarios.py  simple_scenarios_cpp.py
cpp/: CMakeLists.txt  main.cpp  problem.cpp  problem.hpp  prodFunc.cpp  prodFunc.hpp  pybindings.cpp  pybindings.hpp  solve.cpp  solve.hpp
docs/: simple_model.md
